# ReparaturChat

./: .gitignore  database_diagram_io.txt  package-lock.json  package.json
Reparatur-app/: README.md  package-lock.json  package.json
Reparatur-app/src/: App.css  App.jsx  main.jsx
Reparatur-app/src/pages/: chatbot.jsx  login.jsx  signup.jsx
backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_libs.py
backend/src/api/: main.py
backend/src/api/config/: core.py  create_db_tables.py  create_tables.sql  db.py
backend/src/api/database/: __init__.py  table_models.py
backend/src/api/database/repository/: base.py  document_chunk.py  document_tool.py  tool.py  uploaded_pdf.py  user.py
backend/src/api/models/: document_chunk.py  document_tool.py  tool.py  uploaded_pdf.py  user.py
backend/src/api/routers/: __init__.py  chat.py  dependencies.py  document_chunks.py  document_tools.py  tools.py  uploaded_pdfs.py  users.py
backend/src/api/service/: rag.py  uploaded_pdf.py  user.py
